--- a/Instructions/20537B_LAB_AK_03.md
+++ b/Instructions/20537B_LAB_AK_03.md
@@ -21,30 +21,30 @@ VMMonitorModeExtensions \|
 Format-List Name, SecondLevelAddressTranslationExtensions,
 VirtualizationFirmwareEnabled, VMMonitorModeExtensions
 
-1.  In the information that is returned, review the following:
+4.  In the information that is returned, review the following:
 
--   SecondLevelAddressTranslationExtensions
+    -   SecondLevelAddressTranslationExtensions
 
--   VirtualizationFirmwareEnabled
+    -   VirtualizationFirmwareEnabled
 
--   VMMonitorModeExtensions
+    -   VMMonitorModeExtensions
 
-1.  Enter the following PowerShell command and press Enter:
+5.  Enter the following PowerShell command and press Enter:
 
 (Get-CimInstance -ClassName Win32_Processor).Count
 
-1.  Ensure the number returned is **2** or higher.
+6.  Ensure the number returned is **2** or higher.
 
-2.  Enter the following PowerShell command and press Enter:
+7.  Enter the following PowerShell command and press Enter:
 
 Get-CimInstance -ClassName Win32_Processor -Property Name, SocketDesignation,
 NumberOfCores, NumberOfEnabledCore, NumberOfLogicalProcessors \| Format-List
 Name, SocketDesignation, NumberOfCores, NumberOfEnabledCore,
 NumberOfLogicalProcessors
 
-1.  Ensure the **NumberOfCores** for each CPU returned is **6** or higher.
+8.  Ensure the **NumberOfCores** for each CPU returned is **6** or higher.
 
-2.  Leave the **Administrator: Windows PowerShel**l Console open.
+9.  Leave the **Administrator: Windows PowerShel**l Console open.
 
 ####   Task 2: Confirm the number of drives
 
@@ -55,21 +55,21 @@ NumberOfLogicalProcessors
 -FilterScript {\$_.BootPartition -eq \$true} \| Select-Object -ExpandProperty
 DiskIndex
 
-1.  This will obtain the Disk Index of the disk partitions that are part of the
+2.  This will obtain the Disk Index of the disk partitions that are part of the
     boot process, whether they be VHDX file or physical disk.
 
-2.  Enter the following **PowerShell** command to see the Disk Indexes and press
+3.  Enter the following **PowerShell** command to see the Disk Indexes and press
     enter:
 
 \$DiskIndexes
 
-1.  Enter the following PowerShell command and press Enter:
+4.  Enter the following PowerShell command and press Enter:
 
 Get-PhysicalDisk \| Where-Object -FilterScript {\$DiskIndexes -notcontains
 \$*.DeviceID} \| Format-Table FriendlyName, OperationalStatus, HealthStatus,
 \@{Name="Size";Expression={(\$*.Size / 1GB).ToString() + " GB"}}
 
-1.  This shows the disks that are not part of the operating system boot process.
+5.  This shows the disks that are not part of the operating system boot process.
     You should have at least 4 disks listed.
 
 ####   Task 3: Confirm the quantity of memory
@@ -80,17 +80,19 @@ Get-PhysicalDisk \| Where-Object -FilterScript {\$DiskIndexes -notcontains
 \$Memory = (Get-Ciminstance Win32_OperatingSystem \| Select-Object
 -ExpandProperty MaxProcessMemorySize) /1GB
 
-1.  Enter the following **PowerShell** command to see the amount of memory
+2.  Enter the following **PowerShell** command to see the amount of memory
     installed and press enter:
 
 \$Memory
 
-1.  To round the number, enter the following **PowerShell** command and press
+3.  To round the number, enter the following **PowerShell** command and press
     enter:
+    
+[math]::Round($Memory,0)
 
-2.  This will display the amount of memory in GB.
+4.  This will display the amount of memory in GB.
 
-3.  Close the **Administrator: Windows PowerShell** window.
+5.  Close the **Administrator: Windows PowerShell** window.
 
 **Results**: After this exercise, you should have confirmed the hardware on
 which the Azure Stack Development Kit is to be deployed meets the prerequisites.
@@ -123,16 +125,16 @@ which the Azure Stack Development Kit is to be deployed meets the prerequisites.
 
 Set-Location C:\\Media\\LabSetupScripts
 
-1.  Type the following command and then press enter:
+10.  Type the following command and then press enter:
 
 .\\ConnectVPN.ps1
 
-1.  In the **WinRM Security Configuration** prompt that appears, type **Y** and
+11.  In the **WinRM Security Configuration** prompt that appears, type **Y** and
     then press enter.
 
-2.  If a **Security Certificate** prompt appears, click **Yes**.
+12.  If a **Security Certificate** prompt appears, click **Yes**.
 
-3.  When the command completes type **Exit** in the PowerShell window and then
+13.  When the command completes type **Exit** in the PowerShell window and then
     press enter.
 
 ####   Task 2: Ensure both the User and Operator Portals are functioning
@@ -143,58 +145,58 @@ Set-Location C:\\Media\\LabSetupScripts
 
 3.  Sign into **Azure Stack** with the following credentials:
 
--   Username: **AzureStack\\CloudAdminX**
+    -   Username: **AzureStack\\CloudAdminX**
 
--   Password: **Pa55w.rd**
+    -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack - Administration**, page that opens, click
+4.  In the **Microsoft Azure Stack - Administration**, page that opens, click
     **More Services**.
 
-2.  Under **Administrative Resources** click **Resource provider manifests.**
+5.  Under **Administrative Resources** click **Resource provider manifests.**
 
-3.  In the **Resource provider manifests** blade, ensure the following
+6.  In the **Resource provider manifests** blade, ensure the following
     **Resource Provider Manifests** are listed:
 
--   Microsoft.Compute—local--admin
+    -   Microsoft.Compute—local--admin
 
--   Microsoft.SQLAdapter
+    -   Microsoft.SQLAdapter
 
--   Microsoft.Web.Admin
+    -   Microsoft.Web.Admin
 
--   Microsoft.Network—local--admin
+    -   Microsoft.Network—local--admin
 
--   Microsoft.KeyVault—local—admin
+    -   Microsoft.KeyVault—local—admin
 
--   Microsoft.Storage—local--admin
+    -   Microsoft.Storage—local--admin
 
-1.  Open a new tab in **Internet Explorer** and browse to
+7.  Open a new tab in **Internet Explorer** and browse to
     **https://portal.local.azurestack.external**
 
-2.  In the navigation pane, click **More services**.
+8.  In the navigation pane, click **More services**.
 
-3.  Confirm the list of **Services** returned include the following:
+9.  Confirm the list of **Services** returned include the following:
 
--   Dashboard
+    -   Dashboard
 
--   Resource groups
+    -   Resource groups
 
--   All resources
+    -   All resources
 
--   Tags
+    -   Tags
 
--   Recent
+    -   Recent
 
--   Subscriptions
+    -   Subscriptions
 
--   Marketplace
+    -   Marketplace
 
--   Resource explorer
+    -   Resource explorer
 
--   Portal settings
+    -   Portal settings
 
--   Audit logs
+    -   Audit logs
 
-1.  Close the **https://portal.local.azurestack.external** tab that was opened.
+10.  Close the **https://portal.local.azurestack.external** tab that was opened.
 
 ####   Task 3: Ensure no critical alerts are present in Azure Stack
 
@@ -208,15 +210,15 @@ Set-Location C:\\Media\\LabSetupScripts
 4.  Review the following sections and confirm there are no **Critical** alerts
     displayed:
 
--   Alerts
+    -   Alerts
 
--   Update
+    -   Update
 
--   Resource Providers
+    -   Resource Providers
 
--   Infrastructure Roles
+    -   Infrastructure Roles
 
-1.  Sign-out of the **Azure Stack Operator** Portal and then close **Internet
+5.  Sign-out of the **Azure Stack Operator** Portal and then close **Internet
     Explorer**.
 
 **Results**: After this exercise is complete, you will be able to determine if
