--- a/Instructions/20537B_LAB_AK_03.md
+++ b/Instructions/20537B_LAB_AK_03.md
@@ -88,7 +88,7 @@ Get-PhysicalDisk \| Where-Object -FilterScript {\$DiskIndexes -notcontains
 3.  To round the number, enter the following **PowerShell** command and press
     enter:
     
-[math]::Round($Memory,0)
+**[math]::Round($Memory,0)**
 
 4.  This will display the amount of memory in GB.
 
