--- a/Instructions/20537B_LAB_AK_04.md
+++ b/Instructions/20537B_LAB_AK_04.md
@@ -12,16 +12,16 @@ Lab: Managing Offers and Plans in Microsoft Azure Stack
 
 3.  Sign into **Azure Stack** with the following credentials:
 
--   Username: **AzureStack\\CloudAdminX**
+   -   Username: **AzureStack\\CloudAdminX**
 
--   Password: **Pa55w.rd**
+   -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack - Administration**, page that opens, click
+4.  In the **Microsoft Azure Stack - Administration**, page that opens, click
     **Plans**
 
-2.  Click **Add**.
+5.  Click **Add**.
 
-3.  In the **New Plan** blade that opens complete the form using the following
+6.  In the **New Plan** blade that opens complete the form using the following
     settings, all other settings should remain default:
 
     -   Display Name: **Virtual-MachinesX**
@@ -35,9 +35,9 @@ Lab: Managing Offers and Plans in Microsoft Azure Stack
 
     -   Quotas: Accept default **Quotas**.
 
-4.  Click **Create** to create the **Plan**.
+7.  Click **Create** to create the **Plan**.
 
-5.  In the **Plans** blade that opens confirm the **Virtual-MachinesX** Plan is
+8.  In the **Plans** blade that opens confirm the **Virtual-MachinesX** Plan is
     listed. If it is not listed, click the **Refresh** button at the top of the
     blade.
 
@@ -93,19 +93,19 @@ be created per tenant.
 3.  In the **New Offer** blade that opens configure the following settings. All
     other settings should remain as default:
 
--   Display Name: **Virtual MachinesX**
+   -   Display Name: **Virtual MachinesX**
 
--   Provider Subscription: **Default Provider Subscription**
+   -   Provider Subscription: **Default Provider Subscription**
 
--   Resource Group: **Use existing**
+   -   Resource Group: **Use existing**
 
--   Resource Group Name: **RG-OffersAndPlansX**
+   -   Resource Group Name: **RG-OffersAndPlansX**
 
--   Base plans: **virtual-machinesX**.
+   -   Base plans: **virtual-machinesX**.
 
-1.  Click **Create** to create the **Offer**.
+4.  Click **Create** to create the **Offer**.
 
-2.  In the **Offers** blade that opens, confirm the **virtual-machinesX** Offer
+5.  In the **Offers** blade that opens, confirm the **virtual-machinesX** Offer
     is listed. If it is not listed, click the **Refresh** button at the top of
     the blade.
 
@@ -229,38 +229,38 @@ tenant and subscribed to the virtual machines offer.
 5.  Configure the **New Object – User wizard** with the following settings, all
     other setting should remain as default:
 
--   First name: **OlympiaDPX**
+   -   First name: **OlympiaDPX**
 
--   User logon name: **OlympiaDPX**
+   -   User logon name: **OlympiaDPX**
 
--   Password: **Pa55w.rd**
+   -   Password: **Pa55w.rd**
 
--   User must change password at next logon: **Deselect**
+   -   User must change password at next logon: **Deselect**
 
--   User cannot change password: **Select**
+   -   User cannot change password: **Select**
 
--   Password never expires: **Select**
+   -   Password never expires: **Select**
 
-1.  Complete the wizard.
+6.  Complete the wizard.
 
-2.  Right-click **Users**, then click **New**, then click **User**.
+7.  Right-click **Users**, then click **New**, then click **User**.
 
-3.  Configure the **New Object – User wizard** with the following settings, all
+8.  Configure the **New Object – User wizard** with the following settings, all
     other setting should remain as default:
 
--   First name: **OlympiaUserX**
+   -   First name: **OlympiaUserX**
 
--   User logon name: **OlympiaUserX**
+   -   User logon name: **OlympiaUserX**
 
--   Password: **Pa55w.rd**
+   -   Password: **Pa55w.rd**
 
--   User must change password at next logon: **Deselect**
+   -   User must change password at next logon: **Deselect**
 
--   User cannot change password: **Select**
+   -   User cannot change password: **Select**
 
--   Password never expires: **Select**
+   -   Password never expires: **Select**
 
-1.  Complete the wizard and then close **Active Directory Users and Computers**.
+9.  Complete the wizard and then close **Active Directory Users and Computers**.
 
 ![](media/e00b1dc6a9a7da4cfda0bff1ec0c3de8.png)
 
@@ -277,32 +277,32 @@ tenant and subscribed to the virtual machines offer.
 
 3.  Sign into **Azure Stack** with the following credentials:
 
--   Username: **AzureStack\\CloudAdminX**
+   -   Username: **AzureStack\\CloudAdminX**
 
--   Password: **Pa55w.rd**
+   -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack - Administration**, page that opens, click
+4.  In the **Microsoft Azure Stack - Administration**, page that opens, click
     **Plans**
 
-2.  Click **Add**.
+5.  Click **Add**.
 
-3.  In the **New Plan** page that opens configure the following settings, all
+6.  In the **New Plan** page that opens configure the following settings, all
     other settings should remain as default:
 
--   Display Name: **OlympiaProviderPlanX**
+   -   Display Name: **OlympiaProviderPlanX**
 
--   Resource Group: Create a new Resource Group named **DelegationRGX**
+   -   Resource Group: Create a new Resource Group named **DelegationRGX**
 
--   Services: **Microsoft.Subscriptions**
+   -   Services: **Microsoft.Subscriptions**
 
--   Quotas: **delegatedProviderQuota**
+   -   Quotas: **delegatedProviderQuota**
 
-1.  Click **Create** to create the plan.
+7.  Click **Create** to create the plan.
 
-2.  Click the **Refresh** button at the top of the page until the
+8.  Click the **Refresh** button at the top of the page until the
     **OlympiaProviderPlanX** is displayed.
 
-3.  Click the **Microsoft Azure Stack - Administration** link at the top of the
+9.  Click the **Microsoft Azure Stack - Administration** link at the top of the
     page to return to the home page of the **Azure Stack** operator portal.
 
 ####   Task 3: Create an offer that will be used to provide delegation services to Olympia
@@ -315,18 +315,18 @@ tenant and subscribed to the virtual machines offer.
 3.  In the **New Offer** page that opens configure the following settings, all
     other settings should remain as default:
 
--   Display Name: **OlympiaProviderOfferX**
+   -   Display Name: **OlympiaProviderOfferX**
 
--   Resource Group: **DelegationRGX**
+   -   Resource Group: **DelegationRGX**
 
--   Base Plans: **OlympiaProviderPlanX**
+   -   Base Plans: **OlympiaProviderPlanX**
 
-1.  Click **Create** to create the **Offer**.
+4.  Click **Create** to create the **Offer**.
 
-2.  Click the **Refresh** button at the top of the page until the
+5.  Click the **Refresh** button at the top of the page until the
     **OlympiaProviderOfferX** is displayed.
 
-3.  Click the **Microsoft Azure Stack - Administration** link at the top of the
+6.  Click the **Microsoft Azure Stack - Administration** link at the top of the
     page to return to the home page of the **Azure Stack** operator portal.
 
 ####   Task 4: Add the Olympia delegated provider as a subscriber to the offer
@@ -341,15 +341,15 @@ tenant and subscribed to the virtual machines offer.
 4.  In the **New User Subscription** page that opens configure the following
     settings, all other settings should remain as default:
 
--   Display Name: **OlympiaSubscriptionX**
+   -   Display Name: **OlympiaSubscriptionX**
 
--   User: **OlympiaDPX\@azurestack.local**
+   -   User: **OlympiaDPX\@azurestack.local**
 
--   Offer: **OlympiaProviderOfferX**
+   -   Offer: **OlympiaProviderOfferX**
 
-1.  Click **Create** to create the User Subscription.
+5.  Click **Create** to create the User Subscription.
 
-2.  Click the **Microsoft Azure Stack - Administration** link at the top of the
+6.  Click the **Microsoft Azure Stack - Administration** link at the top of the
     page to return to the home page of the **Azure Stack** operator portal.
 
 ####   Task 5: Create a plan that includes the services that Olympia will offer
@@ -362,21 +362,21 @@ tenant and subscribed to the virtual machines offer.
 3.  In the **New Plan** page that opens configure the following settings, all
     other settings should remain as default:
 
--   Display Name: **OlympiaPlanX**
+   -   Display Name: **OlympiaPlanX**
 
--   Resource Group: **DelegationRGX**
+   -   Resource Group: **DelegationRGX**
 
--   Services: **Microsoft.Compute**, **Microsoft.Network** and
+   -   Services: **Microsoft.Compute**, **Microsoft.Network** and
     **Microsoft.Sorage**
 
--   Quotas: Select **Default Quota** for all services
+   -   Quotas: Select **Default Quota** for all services
 
-1.  Click **Create** to create the plan.
+4.  Click **Create** to create the plan.
 
-2.  Click the **Refresh** button at the top of the page until the
+5.  Click the **Refresh** button at the top of the page until the
     **OlympiaPlanX** is displayed.
 
-3.  Click the **Microsoft Azure Stack - Administration** link at the top of the
+6.  Click the **Microsoft Azure Stack - Administration** link at the top of the
     page to return to the home page of the **Azure Stack** operator portal.
 
 ####   Task 6: Create an offer that will be used to delegate services to Olympia
@@ -389,18 +389,18 @@ tenant and subscribed to the virtual machines offer.
 3.  In the **New Offer** page that opens configure the following settings, all
     other settings should remain as default:
 
--   Display Name: **OlympiaOfferX**
+   -   Display Name: **OlympiaOfferX**
 
--   Resource Group: **DelegationRGX**
+   -   Resource Group: **DelegationRGX**
 
--   Base Plans: **OlympiaPlanX**
+   -   Base Plans: **OlympiaPlanX**
 
-1.  Click **Create** to create the **Offer**.
+4.  Click **Create** to create the **Offer**.
 
-2.  Click the **Refresh** button at the top of the page until the
+5.  Click the **Refresh** button at the top of the page until the
     **OlympiaOfferX** is displayed.
 
-3.  Click the **Microsoft Azure Stack - Administration** link at the top of the
+6.  Click the **Microsoft Azure Stack - Administration** link at the top of the
     page to return to the home page of the **Azure Stack** operator portal.
 
 ####   Task 7: Delegate the offer to Olympia
@@ -435,29 +435,29 @@ tenant and subscribed to the virtual machines offer.
 
 3.  Sign into **Azure Stack** with the following credentials:
 
--   Username: **AzureStack\\OlympiaDPX**
+   -   Username: **AzureStack\\OlympiaDPX**
 
--   Password: **Pa55w.rd**
+   -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack**, page that opens, click **Offers.**
+4.  In the **Microsoft Azure Stack**, page that opens, click **Offers.**
 
-2.  In the **Offers** page that opens, click **Add**.
+5.  In the **Offers** page that opens, click **Add**.
 
-3.  In the **New Offer** page that opens, configure the following settings, all
+6.  In the **New Offer** page that opens, configure the following settings, all
     other settings should remain as default:
 
--   Display Name: **OlympiaDelegatedOfferX**
+   -   Display Name: **OlympiaDelegatedOfferX**
 
--   Resource Group: Create a new Resource Group named **OlympiaRGX**
+   -   Resource Group: Create a new Resource Group named **OlympiaRGX**
 
--   Delegated Offer: **OlympiaOffer\<randomeNumber\>**
+   -   Delegated Offer: **OlympiaOffer\<randomeNumber\>**
 
-1.  Click **Create** to create the Offer.
+7.  Click **Create** to create the Offer.
 
-2.  Click the **Refresh** button at the top of the page until the
+8.  Click the **Refresh** button at the top of the page until the
     **OlympiaDelegatedOfferX** appears.
 
-3.  Click the **Microsoft Azure Stack** link to return to the home page of the
+9.  Click the **Microsoft Azure Stack** link to return to the home page of the
     **Azure Stack** portal.
 
 ####   Task 9: Change the offers status to public
@@ -497,56 +497,56 @@ tenant and subscribed to the virtual machines offer.
 
 2.  Login to the **Azure Stack** user portal with the following credentials:
 
--   User name: **AzureStack\\OlympiaUserX**
+   -   User name: **AzureStack\\OlympiaUserX**
 
--   Password: **Pa55w.rd**
+   -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack** portal that opens click **Get a
+3.  In the **Microsoft Azure Stack** portal that opens click **Get a
     Subscription** from the home page.
 
-2.  In the **Get a Subscription** page that opens type **OlympiaOfferX** in the
+4.  In the **Get a Subscription** page that opens type **OlympiaOfferX** in the
     **Display Name** box.
 
-3.  Click **Offer**, then in the **Choose an Offer** page that opens, click
+5.  Click **Offer**, then in the **Choose an Offer** page that opens, click
     **OlympiaDelegatedOfferX** and then click **Create**.
 
-4.  Click **Refresh** to refresh the page.
+6.  Click **Refresh** to refresh the page.
 
-5.  From the **Azure Stack** portal home page, click **New**, then click
+7.  From the **Azure Stack** portal home page, click **New**, then click
     **Compute**, then click **Windows Server 2016 Datacenter Core Eval**.
 
-6.  In the **Basics** page that opens, configure the following settings:
+8.  In the **Basics** page that opens, configure the following settings:
 
--   Name: **OlympiaUserXVM**
+   -   Name: **OlympiaUserXVM**
 
--   Username: **OlympiaUserX**
+   -   Username: **OlympiaUserX**
 
--   Password: **Pa55w.rd12345**
+   -   Password: **Pa55w.rd12345**
 
--   Confirm Password: **Pa55w.rd12345**
+   -   Confirm Password: **Pa55w.rd12345**
 
--   Resource Group: Create a new **Resource Group** named **OlympiaRGX**
+   -   Resource Group: Create a new **Resource Group** named **OlympiaRGX**
 
-1.  Click **OK**.
+9.  Click **OK**.
 
-2.  In the **Size** page that opens, click **A1 Standard** and then click
+10.  In the **Size** page that opens, click **A1 Standard** and then click
     **Select**.
 
-3.  In the **Settings** page that opens, click **OK**.
+11.  In the **Settings** page that opens, click **OK**.
 
-4.  In the **Summary** page that opens, click **OK**.
+12.  In the **Summary** page that opens, click **OK**.
 
-5.  From the **Azure Stack** portal home page, click **Virtual Machines**.
+13.  From the **Azure Stack** portal home page, click **Virtual Machines**.
 
-6.  Wait until the **OlympiaUserXVM** VM appears. This confirm the VM is being
+14.  Wait until the **OlympiaUserXVM** VM appears. This confirm the VM is being
     created.
 
-7.  Optionally wait until the status of the VM changes from **Creating** to
+15.  Optionally wait until the status of the VM changes from **Creating** to
     **Running**. This confirms the VM has been created successfully.
 
-8.  Sign-out of the **Azure Stack** portal.
+16.  Sign-out of the **Azure Stack** portal.
 
-9.  Close Internet Explorer.
+17.  Close Internet Explorer.
 
 **Results**: After this exercise, you should have created a delegated provider
 in Azure Stack and associated the appropriate subscription such that offers and
@@ -574,37 +574,37 @@ virtual machine.
 
 5.  Edit the third, fourth and fifth lines as shown below:
 
-6.  "summary": "Check stock availability and price",
+   - "summary": "Check stock availability and price",
+   
+   - "longSummary": "This application can be used to check availability of
+      Contoso's stock and also get an up-to-date price on each stock item",
 
-7.  "longSummary": "This application can be used to check availability of
+   - "description": "This application can be used to check availability of
     Contoso's stock and also get an up-to-date price on each stock item",
 
-8.  "description": "This application can be used to check availability of
-    Contoso's stock and also get an up-to-date price on each stock item",
+6.  Save and close the **resources.resjson** file.
 
-9.  Save and close the **resources.resjson** file.
-
-10. Navigate to the **C:\\StudentX\\Azure Stack Marketplace Item Generator and
+7. Navigate to the **C:\\StudentX\\Azure Stack Marketplace Item Generator and
     Sample\\Contoso.StockCheck** folder and right-click the **manifest.json**
     file and then click **Open with**, and then click **Notepad**.
 
-11. Edit the lines as shown below:
+8. Edit the lines as shown below:
 
-12. "name": "StockCheckX",
+   - "name": "StockCheckX",
 
-13. "publisher": **"ContosoX",**
+   - "publisher": **"ContosoX",**
 
-14. "version": **"1.0.0",**
+   - "version": **"1.0.0",**
 
-15. "categories":[
+   - "categories":[
 
--   "ContosoX"
+   "ContosoX"
 
     ]
 
-1.  Replace **X** in **Step 8** with your Student number.
+9.  Replace **X** in **Step 8** with your Student number.
 
-2.  Save and close the **manifest.json** file.
+10.  Save and close the **manifest.json** file.
 
 ####   Task 2: Package the new Marketplace Item
 
@@ -624,9 +624,9 @@ Generator and Sample\\Contoso.StockCheck\\manifest.json" -o "
 C:\\StudentX\\Azure Stack Marketplace Item Generator and
 Sample\\Contoso.StockCheck"
 
-1.  Close the **Administrator: Command Prompt** window.
+5.  Close the **Administrator: Command Prompt** window.
 
-2.  Navigate to **C:\\StudentX**\\**Azure Stack Marketplace Item Generator and
+6.  Navigate to **C:\\StudentX**\\**Azure Stack Marketplace Item Generator and
     Sample\\Contoso.StockCheck** and confirm the
     **ContosoX.StockCheckX.1.0.0.azpkg** file is present.
 
@@ -640,11 +640,11 @@ Sample\\Contoso.StockCheck"
 3.  In the **Administrator: Windows PowerShell** window that opens type the
     following commands pressing enter after each command:
 
->   Import-Module
->   C:\\Media\\AzureStack-Tools-master\\Connect\\AzureStack.Connect.psm1
+Import-Module
+C:\\Media\\AzureStack-Tools-master\\Connect\\AzureStack.Connect.psm1
 
->   Add-AzureRmEnvironment -Name CloudAdminX -ArmEndpoint
->   "https://adminmanagement.local.azurestack.external"
+Add-AzureRmEnvironment -Name CloudAdminX -ArmEndpoint
+"https://adminmanagement.local.azurestack.external"
 
 \$Password = ConvertTo-SecureString "Pa55w.rd" -AsPlainText -Force
 
@@ -653,16 +653,16 @@ Sample\\Contoso.StockCheck"
 
 \$tenantID = Get-AzsDirectoryTenantID -ADFS -EnvironmentName CloudAdminX
 
-1.  Enter the following **PowerShell** command and press Enter to login to
+4.  Enter the following **PowerShell** command and press Enter to login to
     **Azure Stack**:
 
 Login-AzureRmAccount -EnvironmentName "CloudAdminX" -TenantId \$tenantID
 -Credential \$Cred
 
-1.  If a **Select Y to enable data collection [Y/N]** prompt opens, type **N**
+5.  If a **Select Y to enable data collection [Y/N]** prompt opens, type **N**
     and then press enter.
 
-2.  Type the following commands pressing enter after each command:
+6.  Type the following commands pressing enter after each command:
 
 \$subscriptionid = (Get-AzureRmSubscription -SubscriptionName 'Default Provider
 Subscription').SubscriptionId
@@ -690,10 +690,10 @@ Sample\\Contoso.StockCheck\\ContosoX.StockCheckX.1.0.0.azpkg"
 Add-AzSGalleryItem -GalleryItemUri
 \$AzureStackPackage.ICloudBlob.StorageUri.PrimaryUri.AbsoluteUri
 
-1.  After entering the final command, you should receive a **Status Code** of
+7.  After entering the final command, you should receive a **Status Code** of
     **Created**.
 
-2.  Close the **Administrator: Windows PowerShell** window.
+8.  Close the **Administrator: Windows PowerShell** window.
 
 ####   Task 4: Confirm the new Marketplace Item is available in the Azure Stack Portal
 
@@ -703,19 +703,19 @@ Add-AzSGalleryItem -GalleryItemUri
 
 3.  Sign into **Azure Stack** with the following credentials:
 
--   Username: **AzureStack\\CloudAdminX**
+   -   Username: **AzureStack\\CloudAdminX**
 
--   Password: **Pa55w.rd**
+   -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack - Administration,** page that opens, click
+4.  In the **Microsoft Azure Stack - Administration,** page that opens, click
     **New**
 
-2.  Notice the new **ContosoX Marketplace** item is now displayed.
+5.  Notice the new **ContosoX Marketplace** item is now displayed.
 
-3.  Click **ContosoX** and review the information provided in the **ContosoX**
+6.  Click **ContosoX** and review the information provided in the **ContosoX**
     blade that opens.
 
-4.  Close the Azure Stack Portal.
+7.  Close the Azure Stack Portal.
 
 **Results**: After this exercise, you should have created a new Marketplace item
 for Contoso’s StockCheck application. You should have also published the
