--- a/Instructions/20537B_LAB_AK_08.md
+++ b/Instructions/20537B_LAB_AK_08.md
@@ -13,58 +13,58 @@ Systems
 
 3.  Sign into **Azure Stack** with the following credentials:
 
--   Username: AzureStack\\ASUserX
+    -   Username: AzureStack\\ASUserX
 
--   Password: **Pa55w.rd**
+    -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack** page that opens, click **Virtual
+4.  In the **Microsoft Azure Stack** page that opens, click **Virtual
     Machines**.
 
-2.  In the **Virtual machines** blade, click **SCOM01**.
+5.  In the **Virtual machines** blade, click **SCOM01**.
 
-3.  In the **SCOM01** blade, click **Connect**.
+6.  In the **SCOM01** blade, click **Connect**.
 
-4.  When prompted with **“Do you open or save SCOM01.rdp (90 bytes) from
+7.  When prompted with **“Do you open or save SCOM01.rdp (90 bytes) from
     portal.azurestack.external?”** click **Open**.
 
-5.  In the **Remote Desktop Connection** dialog, click **Connect**.
+8.  In the **Remote Desktop Connection** dialog, click **Connect**.
 
-6.  In the **Windows Security** dialog, click **More choices**.
+9.  In the **Windows Security** dialog, click **More choices**.
 
-7.  Click **Use a different account**.
+10.  Click **Use a different account**.
 
-8.  In the **Username** box, type **.\\DemoAdmin**.
+11.  In the **Username** box, type **.\\DemoAdmin**.
 
-9.  In the **Password** box, enter **Password12345.**
+12.  In the **Password** box, enter **Password12345.**
 
-10. Click **OK**.
+13. Click **OK**.
 
-11. In the **Remote Desktop Connection** window that opens, click **Yes**.
+14. In the **Remote Desktop Connection** window that opens, click **Yes**.
 
-12. Click **Start**, type **Operations** and then click **Operations Console**.
+15. Click **Start**, type **Operations** and then click **Operations Console**.
 
-13. In the **Operations Manager Console**, click the **Administration**
+16. In the **Operations Manager Console**, click the **Administration**
     workspace.
 
-14. Expand **Management Packs** and then click **Installed Management Packs**.
+17. Expand **Management Packs** and then click **Installed Management Packs**.
 
-15. From the **Tasks** pane click **Import Management Packs**.
+18. From the **Tasks** pane click **Import Management Packs**.
 
-16. In the **Import Management Packs** window that opens, click **Add**, then
+19. In the **Import Management Packs** window that opens, click **Add**, then
     click **Add from disk**.
 
-17. In the **Online Catalog Connection** window that opens, click **No**.
+20. In the **Online Catalog Connection** window that opens, click **No**.
 
-18. In the **Import Management Packs** window that opens, navigate to
+21. In the **Import Management Packs** window that opens, navigate to
     **C:\\ManagementPacks** and then click
     **Microsoft.SystemCenter.AzureStack.mpb** and then click **Open**.
 
-19. In the **Import Management Packs** window, click **Install**.
+22. In the **Import Management Packs** window, click **Install**.
 
-20. When the **Management Pack** has been installed, click **Close** on the
+23. When the **Management Pack** has been installed, click **Close** on the
     **Import Management Packs** window.
 
-21. Leave the connection to **SCOM01** open.
+24. Leave the connection to **SCOM01** open.
 
 ####   Task 2: Import the Azure Stack certificate and enable communications to Azure Stack
 
@@ -92,42 +92,42 @@ Systems
 
 Resolve-DnsName adminmanagement.local.azurestack.external
 
-1.  Make a note of the **IP Address** that is returned.
+9.  Make a note of the **IP Address** that is returned.
 
-2.  Type the following command and then press enter:
+10.  Type the following command and then press enter:
 
 Resolve-DnsName adfs.local.azurestack.external
 
-1.  Make a note of the **IP Address** that is returned.
+11.  Make a note of the **IP Address** that is returned.
 
-2.  Leave the **Windows PowerShell** window open for reference.
+12.  Leave the **Windows PowerShell** window open for reference.
 
-3.  Return to the **SCOM01** connection.
+13.  Return to the **SCOM01** connection.
 
-4.  Navigate to **C:\\Windows\\System32\\drivers\\etc** and then open the
+14.  Navigate to **C:\\Windows\\System32\\drivers\\etc** and then open the
     **Hosts** file with **Notepad**.
 
-5.  Add two new lines to the end of the **Hosts** file as shown below:
+15.  Add two new lines to the end of the **Hosts** file as shown below:
 
 192.168.102.7 adminmanagement.local.azurestack.external
 
 192.168.102.5 adfs.local.azurestack.external
 
-1.  If it is different, Replace the IP Address for
+16.  If it is different, Replace the IP Address for
     **adminmanagement.local.azurestack.external** with **the IP Address**
     obtained in **Step 9**.
 
-2.  If it is different, Replace the IP Address for
+17.  If it is different, Replace the IP Address for
     **adfs.local.azurestack.external** with the **IP Address** obtained in
     **Step 11**.
 
-3.  Note that there should be a space between the IP address and the DNS name
+18.  Note that there should be a space between the IP address and the DNS name
     but they should both be on the same line. You should have added two
     additional lines to the end of the Hosts file.
 
-4.  Save and then close the **Hosts** file.
+19.  Save and then close the **Hosts** file.
 
-5.  Restart **SCOM01** and then login and start the **Operations Console** using
+20.  Restart **SCOM01** and then login and start the **Operations Console** using
     the **Steps 5 – 14** in the previous task.
 
 ####   Task 3: Configuring the Microsoft Azure Management Pack
@@ -183,29 +183,29 @@ Resolve-DnsName adfs.local.azurestack.external
     a **Healthy** state. If the **local Region** is not displayed in a
     **Healthy** state perform the additional steps below:
 
-8.  Click the **Active Alerts** view.
+a.  Click the **Active Alerts** view.
 
-9.  Right-click inside the view and then click **Refresh**.
+b.  Right-click inside the view and then click **Refresh**.
 
-10. Right-click each **Alert** and then click **Close Alert**.
+c. Right-click each **Alert** and then click **Close Alert**.
 
-11. Click the **Regions** view and then right-click the **local** Region.
+d. Click the **Regions** view and then right-click the **local** Region.
 
-12. Click Open, then click Health Explorer for local.
+e. Click Open, then click Health Explorer for local.
 
-13. In the **Health Explorer for local** window that opens, expand the health
+f. In the **Health Explorer for local** window that opens, expand the health
     monitors and then right-click the lowest level monitor and then click
     **Reset Health**.
 
-14. In the **Reset Health** window that opens, click **Yes**.
+g. In the **Reset Health** window that opens, click **Yes**.
 
-15. Click **Close** when the task has completed and then close the **Health
+h. Click **Close** when the task has completed and then close the **Health
     Explorer for local** window.
 
-16. Right-click in the **Regions** view and then click **Refresh**. The
+i. Right-click in the **Regions** view and then click **Refresh**. The
     **State** for the **local** Region should now change to **Healthy**.
 
-17. Leave the Operations Console open.
+8. Leave the Operations Console open.
 
 **Results**: After this exercise, you should have imported the Microsoft Azure
 Management Pack into Operations Manager. You should have also configured
