--- a/Instructions/20537B_LAB_04.md
+++ b/Instructions/20537B_LAB_04.md
@@ -29,7 +29,7 @@ Lab Setup
 
 **Host Computer:** AzS-RDP01
 
-**User Name:** AzureStack\\CloudAdminX
+**User Name:** .\\CloudAdminX
 
 **Password:** Pa55w.rd
 
