--- a/Instructions/20537B_LAB_07.md
+++ b/Instructions/20537B_LAB_07.md
@@ -34,7 +34,7 @@ Lab Setup
 
 **Host Computer** AZS-RDP01
 
-**User Name:** AzureStack\\CloudAdminX
+**User Name:** .\\CloudAdminX
 
 **Password:** Pa55w.rd
 
