--- a/Instructions/20537B_LAB_08.md
+++ b/Instructions/20537B_LAB_08.md
@@ -30,7 +30,7 @@ Lab Setup
 
 **Host Computer:** AZS-RDP01
 
-**User Name:** AzureStack\\CloudAdminX
+**User Name:** .\\CloudAdminX
 
 **Password:** Pa55w.rd
 
