--- a/Instructions/20537B_LAB_05.md
+++ b/Instructions/20537B_LAB_05.md
@@ -737,7 +737,7 @@ C:\\StudentX\\Module05\\DeployVM.parameters.json --debug
 
 }
 
-1.  To this:
+1.  To this. Note the X in StudentXVM should alo be changed to your student number:
 
 {
 
@@ -750,7 +750,7 @@ C:\\StudentX\\Module05\\DeployVM.parameters.json --debug
 
 "VMNAME": {
 
-"value": "Student1VM"
+"value": "StudentXVM"
 
 },
 
