--- a/Instructions/20537B_LAB_AK_05.md
+++ b/Instructions/20537B_LAB_AK_05.md
@@ -740,7 +740,7 @@ C:\\StudentX\\Module05\\DeployVM.parameters.json --debug
 
 }
 
-9.  To this:
+9.  To this. Note the X in StudentXVM should alo be changed to your student number:
 
 {
 
@@ -753,7 +753,7 @@ C:\\StudentX\\Module05\\DeployVM.parameters.json --debug
 
 "VMNAME": {
 
-"value": "Student1VM"
+"value": "StudentXVM"
 
 },
 
