--- a/Instructions/20537B_LAB_AK_07.md
+++ b/Instructions/20537B_LAB_AK_07.md
@@ -39,7 +39,7 @@ Lab: Configuring Platform as a Service in Azure Stack
 
    -   Size of Hosting Server in GB:**50**
 
-   -   Resource group: Use existing **SQLRPRG**
+   -   Resource group: Use existing **SQLRG**
 
    -   SKU: Create a new SKU with the following settings and then click **OK**:
 
