--- a/Instructions/20537B_LAB_07.md
+++ b/Instructions/20537B_LAB_07.md
@@ -96,7 +96,7 @@ table.
 
     -   Size of Hosting Server in GB:**50**
 
-    -   Resource group: Use existing **SQLRPRG**
+    -   Resource group: Use existing **SQLRG**
 
     -   SKU: Create a new SKU with the following settings:
 
